2005-08-11  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclExecute.c:	Rewrite of INST_LAND/INST_LOR to take
	advantage of loss of "pure double" issues.  Merged INST_UPLUS
	with INST_TRY_CVT_TO_NUMERIC and updated to use improved rules
	for impure "double"s as well.

	* generic/tclStrToD.c:	Restored conditional generation of
	tclWideIntType values by TclParseNumber so that Tcl's not
	completely broken while bignum calculation support is incomplete.
	The NO_WIDE_TYPE macro can be used to disable this.

	* generic/tclBasic.c (ExprAbsFunc):	First pass making [expr abs(.)]
	bignum-aware.

2005-08-10  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclTomMath.h:	Added mp_shrink, mp_to_unsigned_bin,
	* unix/Makefile.in:	mp_to_unsigned_bin_n, and mp_unsigned_bin_size
	* win/Makefile.in:	to routines from libtommath used by Tcl.
	* win/makefile.vc:

	* generic/tommath.h:	make gentommath_h

	* generic/tclObj.c:	Substantial rewrite to make all number
	parsing flow through TclParseNumber().  Also established the
	NO_WIDE_TYPE and BIGNUM_AUTO_NARROW #ifdef's to help track the
	assumptions of different portions of the code.

	* generic/tclInt.h:	Added NO_WIDE_TYPE #ifdefs

2005-08-08  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclObj.c:	Replaced some goto's with loops and started
	use of BIGNUM_AUTO_NARROW and NO_WIDE_TYPE.

2005-08-05  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]
	* generic/tclObj.c:	Rewrote Tcl_GetDoubleFromObj().

2005-08-04  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch] Updated from HEAD

	* generic/tclObj.c:	Rewrote Tcl_GetBooleanFromObj() and supporting
	routines to make use of TclParseNumber.  This reduces the potential
	number of times a string value must be scanned.

	* generic/tclObj.c:	Simplified routines that manage the typeTable.
	Deleted the UpdateStringOfBoolean() routine, that can never be called.
